Do not delay removing of the blur when unlocking.

Bug: 801632
Change-Id: I559c747a7bd92df052258ef2e18b469e9fe09ef1
Reviewed-on: https://chromium-review.googlesource.com/872128
Reviewed-by: James Cook <jamescook@chromium.org>
Commit-Queue: Aga Wronska <agawronska@chromium.org>
Cr-Commit-Position: refs/heads/master@{#530594}
Former-commit-id: f341c59bc188013f67ccd7498806293d5e5802e2