ash/session/session_controller.cc
@@ -116,10 +116,6 @@ bool SessionController::IsUserSessionBlocked() const {
          !(state_ == SessionState::LOCKED && is_unlocking_);
 }
 
-bool SessionController::IsUnlocking() const {
-  return is_unlocking_;
-}
-
 bool SessionController::IsInSecondaryLoginScreen() const {
   return state_ == SessionState::LOGIN_SECONDARY;
 }
